force-app/main/default/objects/AccountCFJunction__c/AccountCFJunction__c.object-meta.xml
<CustomObject>
    <label>Company CF Junction</label>
    <nameField>
        <displayFormat>CCFJ{000000}</displayFormat>
        <label>Company CF Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company CF Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>