force-app/main/default/objects/AccountCFJunction__c/fields/AccountConsultants__c.field-meta.xml
<CustomField>
    <fullName>AccountConsultants__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Consultants</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>