force-app/main/default/objects/AccountCFJunction__c/fields/AccountFirm__c.field-meta.xml
<CustomField>
    <fullName>AccountFirm__c</fullName>
    <label>Company/Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Consulting Firm</value>
        </filterItems>
        <infoMessage>All Account Types Except Consulting Firm type is shown</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_CF_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>