force-app/main/default/objects/AccountCFJunction__c/fields/ConsultingFirm__c.field-meta.xml
<CustomField>
    <fullName>ConsultingFirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consulting Firm</value>
        </filterItems>
        <infoMessage>Only Account Type of Consulting Firm is shown</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_CF_Junction1</relationshipName>
    <type>Lookup</type>
</CustomField>