force-app/main/default/objects/AccountCFJunction__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>