force-app/main/default/objects/AccountCFJunction__c/fields/RelationshipRole__c.field-meta.xml
<CustomField>
    <fullName>RelationshipRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>