force-app/main/default/objects/AccountCFJunction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ConsultingFirm__c</columns>
    <columns>AccountFirm__c</columns>
    <columns>AccountConsultants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>